adding new Ace link

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
 
        <div class="card shadow mb-4" style="min-width: 17rem">
-        <a href="https://www.acehotel.com/pittsburgh">
+        <a href="https://www.acehotel.com/inline-book/slug=pittsburgh&promo_code=07132018WED&code_type=group_code&arrival_date=2018-07-13&departure_date=2018-07-15">
         <img class="card-img-top" src="img/ace.png" alt="Card image">
         </a>
           <div class="card-block">
