--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
    
 
         <div class="col-md-4 col-xs-12">
-          <a href="#">
-          <img class="card-img-top" src="img/coming.png" alt="Card image cap">
+          <a href="https://www.myregistry.com/wedding-registry/Shane-Gring-and-Skyler-Roeshot-Pittsburgh-PA/1540989">
+          <img class="card-img-top" src="img/hd.png" alt="Card image cap">
           </a>
         </div>
       </div>
