--- a/brotherhood.html
+++ b/brotherhood.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="#schedule">Schedule</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#line-up">Members</a>
+                <a class="nav-link" href="#members">Members</a>
             </li>
         </ul>
     </div>
@@ -204,13 +204,13 @@
 
 
 
-<div id="membership" class="row" style="margin-top: 5%; margin-bottom: 5%">
+<div id="members" class="row" style="margin-top: 5%; margin-bottom: 5%">
 <div class="container-fluid">
 
 	<h1 style="text-align: center" class="mb-4">Membership</h1>
 
 
-<div class="col-sm-10 offset-1">
+<div class="col-sm-10 offset-sm-1 col-10 offset-1">
 <div class="row mt-4">
 <div class="col-sm-5 offset-sm-1 col-12">
 	
@@ -274,7 +274,7 @@
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/Lovingkindness.png" />
+		<img class="img-fluid" src="img/icons/lovingkindness.png" />
 	</div>
 
 	<div class="col-9">
@@ -328,7 +328,7 @@
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/Enterprise.png" />
+		<img class="img-fluid" src="img/icons/enterprise.png" />
 	</div>
 
 	<div class="col-9">
