--- a/brotherhood.html
+++ b/brotherhood.html
@@ -38,7 +38,7 @@
     <div class="navbar-collapse collapse" id="collapsingNavbar3">
         <ul class="nav navbar-nav ml-auto w-100">
           <li class="nav-item">
-                <a class="nav-link" href="www.meetusinthegarden.com">← Back to meetusinthegarden.com</a>
+                <a class="nav-link" href="index.html">← Back to meetusinthegarden.com</a>
             </li>
         </ul>
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
