--- a/brotherhood.html
+++ b/brotherhood.html
@@ -69,8 +69,13 @@
   .a-spot img {
   width: 60%; 
 }
+}
 
 
+.shadow {
+background: #FFFFFF;
+box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
+}
 </style>
 
 
@@ -119,7 +124,7 @@
 
 
 .b-spot-front img {
-  width: 80%;
+  width: 95%;
 }
 
 
@@ -127,7 +132,7 @@
 @media (min-width: 800px) {
 
 .b-spot-front img {
-  width: 50%;
+  width: 55%;
   
 }
 
@@ -153,6 +158,12 @@
     padding-left: 1.5rem;
   }
 
+
+h3, h5 {
+letter-spacing: -0.09px;
+line-height: 26px;
+}
+
 </style>
 
 
@@ -165,13 +176,40 @@
     </span>
 -->
 
-    <div class="b-spot-front" style="text-align: center; position: relative;">
+    <div class="b-spot-front" style="position: relative;">
 
-    	<h1>Action Items</h1>
+    	<h1 class="text-center">Action Items</h1>
 
-    	<a href="https://www.acehotel.com/inline-book/slug=pittsburgh&promo_code=07132018WED&code_type=group_code&arrival_date=2018-07-13&departure_date=2018-07-15">
-      <img class="image-3 mt-3" src="img/men/action.png">
-  </a>
+
+  <div class="row mt-4">
+    <div class="col-sm-6 offset-sm-3 col-10 offset-1 shadow" style="padding: 4% 5%">
+      <h3><strong>1. BOOK HOTEL</strong></h3>
+      <h5 style="font-weight: 100">We’re encourging all “Men of Virtue” to book rooms at the Ace Hotel. This is the location of the Rehersal dinner, and where we’ll get ready on Saturday.</em></h5>
+      <a class="btn btn-primary mt-4" href="https://www.acehotel.com/inline-book/slug=pittsburgh&promo_code=07132018WED&code_type=group_code&arrival_date=2018-07-13&departure_date=2018-07-15">Book Now</a>
+    </div>
+  </div>
+
+
+   <div class="row mt-4">
+    <div class="col-sm-6 offset-sm-3 col-10 offset-1 shadow" style="padding: 4% 5%">
+      <h3><strong>2. CONFIRM YOUR GEAR</strong></h3>
+      <h5 style="font-weight: 100">This week, you will recieve your suit in-person or by mail. Please confirm the size, and please get it tailored to fit yourself perfectly asap!</h5>
+      <h5 class="mt-3" style="font-weight: 100">Note: ties will be provided on-site. We’re getting custom ties design and built by the one and only, Alex Suer (Ruiz).</h5>
+      <h5 class="mt-3" style="font-weight: 100">Shoes: bring a nice brown pair.</h5>
+    </div>
+  </div>
+
+
+  <div class="row mt-4">
+    <div class="col-sm-6 offset-sm-3 col-10 offset-1  shadow" style="padding: 4% 5%">
+      <h3><strong>3. PREPARE FOR ROAST</strong></h3>
+      <h5 style="font-weight: 100">Our very own “Gentleman of Honour” Scott Gring will be MC-ing the Friday night rehersal dinner and will be asking some of you to share a story or unflattering joke at Shane’s expense. Look out for an email soon.</h5>
+    </div>
+  </div>
+
+
+
+
     </div>
 
   </div>
@@ -196,6 +234,9 @@
     	<h1>Schedule</h1>
     
       <img class="image-3 mt-3" src="img/men/schedule.png">
+
+
+
     </div>
 
   </div>
@@ -215,14 +256,14 @@
 <div class="col-sm-5 offset-sm-1 col-12">
 	
 
-<div class="row nt-3">
+<div class="row mt-3">
 	<div class="col-3">
 		<img class="img-fluid" src="img/icons/distinction.png" />
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Gentleman of Distinction</h3>
-		<h2>Kyle Robert Gring</h2>
+		<h4 class="mt-3" style="color: #414141">Gentleman of Distinction</h4>
+		<h3>Kyle Robert Gring</h3>
 	</div>
 </div>
 
@@ -232,8 +273,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Gentleman of Honour</h3>
-		<h2>Scott Paul Gring</h2>
+		<h4 class="mt-3" style="color: #414141">Gentleman of Honour</h4>
+		<h3>Scott Paul Gring</h3>
 	</div>
 </div>
 
@@ -244,8 +285,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Fidelity</h3>
-		<h2>Eric Six</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Fidelity</h4>
+		<h3>Eric Six</h3>
 	</div>
 </div>
 
@@ -255,8 +296,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Courage</h3>
-		<h2>Jonathan Grubb</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Courage</h4>
+		<h3>Jonathan Grubb</h3>
 	</div>
 </div>
 
@@ -266,8 +307,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Spirit</h3>
-		<h2>Tristan Chan</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Spirit</h4>
+		<h3>Tristan Chan</h3>
 	</div>
 </div>
 
@@ -278,8 +319,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Lovingkindness</h3>
-		<h2>J. Larimer Walton</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Lovingkindness</h4>
+		<h3>J. Larimer Walton</h3>
 	</div>
 </div>
 
@@ -297,8 +338,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Good Humour</h3>
-		<h2>Joesph Puchala</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Good Humour</h4>
+		<h3>Joesph Puchala</h3>
 	</div>
 </div>
 
@@ -308,8 +349,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Reverence</h3>
-		<h2>William T. James, IV</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Reverence</h4>
+		<h3>William T. James, IV</h3>
 	</div>
 </div>
 
@@ -320,8 +361,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Integrity</h3>
-		<h2>Maxxwel Rodriguez</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Integrity</h4>
+		<h3>Maxxwel Rodriguez</h3>
 	</div>
 </div>
 
@@ -332,8 +373,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Enterprise</h3>
-		<h2>John Baladamenti</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Enterprise</h4>
+		<h3>John Baladamenti</h3>
 	</div>
 </div>
 
@@ -343,8 +384,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Man of Wit</h3>
-		<h2>Miles J. Suer</h2>
+		<h4 class="mt-3" style="color: #414141">Man of Wit</h4>
+		<h3>Miles J. Suer</h3>
 	</div>
 </div>
 
@@ -354,8 +395,8 @@
 	</div>
 
 	<div class="col-9">
-		<h3 class="mt-3" style="color: #414141">Young Man of Authenticity</h3>
-		<h2>Chase Lehn</h2>
+		<h4 class="mt-3" style="color: #414141">Young Man of Authenticity</h4>
+		<h3>Chase Lehn</h3>
 	</div>
 </div>
 
