--- a/brotherhood.html
+++ b/brotherhood.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="#schedule">Schedule</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#members">Members</a>
+                <a class="nav-link" href="#members">Membership</a>
             </li>
         </ul>
     </div>
@@ -220,7 +220,7 @@ line-height: 26px;
 
 
 
-<div id="schedule" class="row" style="margin-top: 5%; margin-bottom: 5%">
+<div id="schedule" class="row" style="margin-top: 20%; margin-bottom: 5%">
   <div class="container-fluid mt-4 mb-4" style="position: relative; top: 0; left: 0;">  
 
 <!--
@@ -245,7 +245,7 @@ line-height: 26px;
 
 
 
-<div id="members" class="row" style="margin-top: 5%; margin-bottom: 5%">
+<div id="members" class="row" style="margin-top: 20%; margin-bottom: 5%">
 <div class="container-fluid">
 
 	<h1 style="text-align: center" class="mb-4">Membership</h1>
