--- a/brotherhood.html
+++ b/brotherhood.html
@@ -194,7 +194,7 @@ line-height: 26px;
     <div class="col-sm-6 offset-sm-3 col-10 offset-1 shadow" style="padding: 4% 5%">
       <h3><strong>2. CONFIRM YOUR GEAR</strong></h3>
       <h5 style="font-weight: 100">This week, you will recieve your suit in-person or by mail. Please confirm the size, and please get it tailored to fit yourself perfectly asap!</h5>
-      <h5 class="mt-3" style="font-weight: 100">Note: ties will be provided on-site. We’re getting custom ties design and built by the one and only, Alex Suer (Ruiz).</h5>
+      <h5 class="mt-3" style="font-weight: 100">Note: ties will be provided on-site. We’re getting custom ties designed and built by the one and only, Alex Suer (Ruiz).</h5>
       <h5 class="mt-3" style="font-weight: 100">Shoes: bring a nice brown pair.</h5>
     </div>
   </div>
