--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="#registery">For a Life Together</a>
             </li>
-            <li class="nav-item mr-2">
-                <a class="btn nav-link" href="#rsvp" style="background-color: #CA9984; color: #fff">RSVP</a>
-            </li>
         </ul>
     </div>
 </nav>
@@ -263,17 +260,11 @@
 
 
 
-<div id="rsvp" class="row section" style="background-color: #CA9984;">
+<div id="order" class="row" style="background-color: #CA9984;">
   <div class="container-fluid mt-4">
     <div class="col-md-10 offset-md-1"> 
 
-      <h1 class="text-center pt-4 pb-4" style="color: #fff">Répondez s'il vous plaît</h1>
-
-      <div class="col-md-4 offset-md-4">
-        <hr />
-      </div>
-
-      <h1 class="text-center pt-4 pb-4">Coming soon</h1>
+      <h4 class="pt-4 pb-4 float-right"><a href="order.html" style="color: #fff">Order of Virtue</h4>
 
     </div>
   </div>
