--- a/order.html
+++ b/order.html
@@ -84,7 +84,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
         <div class="container-fluid mt-4 mb-4">  
 
           <div class="a-spot" style="text-align: center">
-          <img class="image-1" src="img/men/brotherhood.png"">
+          <img class="image-1" src="img/men/order.png"">
           </div>
 
       </div>
@@ -184,7 +184,7 @@ line-height: 26px;
   <div class="row mt-4">
     <div class="col-sm-6 offset-sm-3 col-10 offset-1 shadow" style="padding: 4% 5%">
       <h3><strong>1. BOOK HOTEL</strong></h3>
-      <h5 style="font-weight: 100">We’re encourging all “Men of Virtue” to book rooms at the Ace Hotel. This is the location of the Rehersal dinner, and where we’ll get ready on Saturday.</em></h5>
+      <h5 style="font-weight: 100">We’re encouraging all “Men of Virtue” to book rooms at the Ace Hotel. This is the location of the Rehearsal dinner, and where we’ll get ready on Saturday.</em></h5>
       <a class="btn btn-primary mt-4" href="https://www.acehotel.com/inline-book/slug=pittsburgh&promo_code=07132018WED&code_type=group_code&arrival_date=2018-07-13&departure_date=2018-07-15">Book Now</a>
     </div>
   </div>
@@ -193,7 +193,7 @@ line-height: 26px;
    <div class="row mt-4">
     <div class="col-sm-6 offset-sm-3 col-10 offset-1 shadow" style="padding: 4% 5%">
       <h3><strong>2. CONFIRM YOUR GEAR</strong></h3>
-      <h5 style="font-weight: 100">This week, you will recieve your suit in-person or by mail. Please confirm the size, and please get it tailored to fit yourself perfectly asap!</h5>
+      <h5 style="font-weight: 100">This week, you will receive your suit in-person or by mail. Please confirm the size, and please get it tailored to fit yourself perfectly asap!</h5>
       <h5 class="mt-3" style="font-weight: 100">Note: ties will be provided on-site. We’re getting custom ties designed and built by the one and only, Alex Suer (Ruiz).</h5>
       <h5 class="mt-3" style="font-weight: 100">Shoes: bring a nice brown pair.</h5>
     </div>
@@ -203,7 +203,7 @@ line-height: 26px;
   <div class="row mt-4">
     <div class="col-sm-6 offset-sm-3 col-10 offset-1  shadow" style="padding: 4% 5%">
       <h3><strong>3. PREPARE FOR ROAST</strong></h3>
-      <h5 style="font-weight: 100">Our very own “Gentleman of Honour” Scott Gring will be MC-ing the Friday night rehersal dinner and will be asking some of you to share a story or unflattering joke at Shane’s expense. Look out for an email soon.</h5>
+      <h5 style="font-weight: 100">Our very own “Gentleman of Honour” Scott Gring will be MC-ing the Friday night rehearsal dinner and will be asking some of you to share a story or unflattering joke at Shane’s expense. Look out for an email soon.</h5>
     </div>
   </div>
 
