--- a/order.html
+++ b/order.html
@@ -41,6 +41,7 @@
                 <a class="nav-link" href="index.html">← Back to meetusinthegarden.com</a>
             </li>
         </ul>
+        <!--
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
             <li class="nav-item">
                 <a class="nav-link" href="#action">Action Items</a>
@@ -52,6 +53,7 @@
                 <a class="nav-link" href="#members">Membership</a>
             </li>
         </ul>
+      -->
     </div>
 </nav>
 
@@ -79,7 +81,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
 </style>
 
 
-<div class="col-12">
+<div class="col-sm-10 offset-sm-1 col-10 offset-1">
       <div class="row">
         <div class="container-fluid mt-4 mb-4">  
 
@@ -166,15 +168,10 @@ line-height: 26px;
 
 </style>
 
-
+<!--
 <div id="action" class="row" style="margin-top: 5%; margin-bottom: 5%">
   <div class="container-fluid mt-4 mb-4" style="position: relative; top: 0; left: 0;">  
 
-<!--
-    <span class="b-spot-back">
-      <img class="image-2" src="img/peony.png">
-    </span>
--->
 
     <div class="b-spot-front" style="position: relative;">
 
@@ -223,11 +220,7 @@ line-height: 26px;
 <div id="schedule" class="row" style="margin-top: 20%; margin-bottom: 5%">
   <div class="container-fluid mt-4 mb-4" style="position: relative; top: 0; left: 0;">  
 
-<!--
-    <span class="c-spot-back">
-      <img class="image-2" src="img/rose.png">
-    </span>
-   -->
+<
 
     <div class="b-spot-front" style="text-align: center; position: relative;">
 
@@ -242,23 +235,206 @@ line-height: 26px;
   </div>
 </div>
 
+-->
 
 
-
-<div id="members" class="row" style="margin-top: 20%; margin-bottom: 5%">
+<div id="members" class="row" style="margin-top: 5%; margin-bottom: 5%">
 <div class="container-fluid">
 
-	<h1 style="text-align: center" class="mb-4">Membership</h1>
+
+<div class="col-sm-8 offset-sm-2 col-10 offset-1">
+    <h1 style="text-align: center" class="mb-4">Sisterhood</h1>
+<div class="row mt-4">
+<div class="col-sm-5 offset-sm-1 col-12">
+  
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/three-star-top.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Maid of Honour</h4>
+    <h3>Devon Roeshot</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/compassion.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Compassion</h4>
+    <h3>Kristin Lyman</h3>
+  </div>
+</div>
 
 
-<div class="col-sm-10 offset-sm-1 col-10 offset-1">
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/magnanimity.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Magnanimity</h4>
+    <h3>Mary Fiedler</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/charity.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Charity</h4>
+    <h3>Amy O'Shea</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/wonder.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Wonder</h4>
+    <h3>Alexandra Tarasi </h3>
+  </div>
+</div>
+
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/grace.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Grace</h4>
+    <h3>Erica Amoroso</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/gentleness.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Young Lady of Gentleness</h4>
+    <h3>Elisa Semon</h3>
+  </div>
+</div>
+
+</div>
+
+
+
+
+<div class="col-sm-5 col-12">
+  
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/benevolence.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Benevolence</h4>
+    <h3>Jenna Haworth</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/helpfulness.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Helpfulness</h4>
+    <h3>Danielle Breitbart</h3>
+  </div>
+</div>
+
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/fortitude.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Fortitude</h4>
+    <h3>Margaret Robins</h3>
+  </div>
+</div>
+
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/generosity.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Generosity</h4>
+    <h3>Katie Adams</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/gratitude.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Gratitude</h4>
+    <h3>Christine Olsonr</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/loyalty.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Lady of Loyalty</h4>
+    <h3>Liz McInerney</h3>
+  </div>
+</div>
+
+<div class="row mt-3">
+  <div class="col-3">
+    <img class="img-fluid" src="img/icons/goodwill.png" />
+  </div>
+
+  <div class="col-9">
+    <h4 class="mt-3" style="color: #414141">Young Lady of Goodwill</h4>
+    <h3>Colette Semon</h3>
+  </div>
+</div>
+
+
+</div>
+</div>
+</div>
+
+
+
+
+
+<!---------------------------->
+
+
+<div class="col-sm-8 offset-sm-2 col-10 offset-1" style="margin-top: 10%">
+    <h1 style="text-align: center" class="mt-4 mb-4">Brotherhood</h1>
 <div class="row mt-4">
 <div class="col-sm-5 offset-sm-1 col-12">
 	
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/distinction.png" />
+		<img class="img-fluid" src="img/icons/three-star-left.png" />
 	</div>
 
 	<div class="col-9">
@@ -269,7 +445,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/honour.png" />
+		<img class="img-fluid" src="img/icons/three-star-right.png" />
 	</div>
 
 	<div class="col-9">
@@ -391,7 +567,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/auth.png" />
+		<img class="img-fluid" src="img/icons/authenticity.png" />
 	</div>
 
 	<div class="col-9">
@@ -404,6 +580,12 @@ line-height: 26px;
 </div>
 </div>
 </div>
+
+
+</div>
+
+
+
 
     </div>
     
