--- a/order.html
+++ b/order.html
@@ -86,7 +86,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
         <div class="container-fluid mt-4 mb-4">  
 
           <div class="a-spot" style="text-align: center">
-          <img class="image-1" src="img/men/order.png"">
+          <img class="image-1" src="img/men/order-new.png"">
           </div>
 
       </div>
