--- a/order.html
+++ b/order.html
@@ -457,7 +457,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/fidelity.png" />
+		<img class="img-fluid" src="img/icons/fidelity-new.png" />
 	</div>
 
 	<div class="col-9">
@@ -491,7 +491,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/lovingkindness.png" />
+		<img class="img-fluid" src="img/icons/lovingkindness-new.png" />
 	</div>
 
 	<div class="col-9">
@@ -510,7 +510,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/good-humor.png" />
+		<img class="img-fluid" src="img/icons/good-humor-new.png" />
 	</div>
 
 	<div class="col-9">
@@ -556,7 +556,7 @@ line-height: 26px;
 
 <div class="row mt-3">
 	<div class="col-3">
-		<img class="img-fluid" src="img/icons/wit.png" />
+		<img class="img-fluid" src="img/icons/wit-new.png" />
 	</div>
 
 	<div class="col-9">
