--- a/order.html
+++ b/order.html
@@ -561,7 +561,7 @@ line-height: 26px;
 
 	<div class="col-9">
 		<h4 class="mt-3" style="color: #414141">Man of Wit</h4>
-		<h3>Miles J. Suer</h3>
+		<h3>Miles Suer</h3>
 	</div>
 </div>
 
