--- a/order.html
+++ b/order.html
@@ -323,7 +323,7 @@ line-height: 26px;
 
   <div class="col-9">
     <h4 class="mt-3" style="color: #414141">Young Lady of Gentleness</h4>
-    <h3>Elisa Semon</h3>
+    <h3>Elise Semon</h3>
   </div>
 </div>
 
