--- a/order.html
+++ b/order.html
@@ -388,7 +388,7 @@ line-height: 26px;
 
   <div class="col-9">
     <h4 class="mt-3" style="color: #414141">Lady of Gratitude</h4>
-    <h3>Christine Olsonr</h3>
+    <h3>Christine Olson</h3>
   </div>
 </div>
 
