--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#registery">For a Life Together</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="order.html">The Order of Virtue</a>
+            </li>
         </ul>
     </div>
 </nav>
@@ -136,15 +139,21 @@
 
 </style>
 
-<div id="schedule" class="row" style="margin-top: 15%; margin-bottom: 15%">
+<div id="schedule" class="row" style="margin-top: 5%; margin-bottom: 15%">
   <div class="container-fluid mt-4 mb-4" style="position: relative; top: 0; left: 0;">  
 
+<!--
     <span class="b-spot-back">
       <img class="image-2" src="img/flower-1.png">
     </span>
+  -->
 
     <div class="b-spot-front" style="text-align: center; position: relative;">
-      <img class="image-3" src="img/invite.png">
+      <img class="image-3 shadow" src="img/invite-new.png">
+    </div>
+
+    <div class="b-spot-front" style="text-align: center; position: relative;">
+      <img class="image-3 shadow" src="img/schedule-new.png">
     </div>
 
   </div>
