--- a/rehersal.html
+++ b/rehersal.html
@@ -41,6 +41,7 @@
                 <a class="nav-link" href="index.html">← Back to meetusinthegarden.com</a>
             </li>
         </ul>
+        
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
           <li class="nav-item">
                 <a class="nav-link" href="order.html">The Order</a>
@@ -55,6 +56,7 @@
                 <a class="nav-link" href="rehersal.html">Rehersal</a>
             </li>
         </ul>
+      
     </div>
 </nav>
 
@@ -81,18 +83,43 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
 }
 </style>
 
+<div class="col-sm-10 offset-sm-1 col-10 offset-1">
+    <div class="row">
+        <div class="container-fluid mt-4 mb-4">
+          <div class="a-spot" style="text-align: center">
+
+            <h4><a style="color: #B1605A" href="https://docs.google.com/document/d/1I4BIJkfI0vo1-oj2hJdcidTXyQR4fajCCQu7asdOCJY/edit?usp=sharing">Check out these tips for roasting →</a></h4>
+
+          </div>
+
+        </div>
+      </div>
+</div>
+
 
 <div class="col-sm-10 offset-sm-1 col-10 offset-1">
       <div class="row">
         <div class="container-fluid mt-4 mb-4">  
 
           <div class="a-spot" style="text-align: center">
-          <img class="image-1" src="img/men/order-new.png"">
+          <img class="image-1 shadow" src="img/rehersal/rehersal-1.png"">
           </div>
 
-      </div>
-      </div>
     </div>
+  </div>
+</div>
+
+<div class="col-sm-10 offset-sm-1 col-10 offset-1">
+      <div class="row">
+        <div class="container-fluid mt-4 mb-4">  
+
+          <div class="a-spot" style="text-align: center">
+          <img class="image-1 shadow" src="img/rehersal/rehersal-2.png"">
+          </div>
+
+    </div>
+  </div>
+</div>
 
 
 
