--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
   .a-spot img {
   width: 60%; 
 }
+}
 
+.shadow-big {
+box-shadow: 0 9px 90px 0 rgba(123,123,123,0.50);
+}
 
 </style>
 
@@ -149,11 +153,11 @@
   -->
 
     <div class="b-spot-front" style="text-align: center; position: relative;">
-      <img class="image-3 shadow" src="img/invite-new.png">
+      <img class="image-3 shadow-big" src="img/invite-new.png">
     </div>
 
     <div class="b-spot-front" style="text-align: center; position: relative;">
-      <img class="image-3 shadow" src="img/schedule-new.png">
+      <img class="image-3 shadow-big" src="img/schedule-new.png">
     </div>
 
   </div>
