--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+     <meta property="og:title" content="Skyler and Shane's Wedding">
+    <meta property="og:image" content="img/a-spot.png">
+    <meta property="og:description" content="Everything you need to know for our special day">
+    <meta property="og:url" content="http://www.meetusinthegarden.com">
+
     <!-- TypeKit -->
     <link rel="stylesheet" href="https://use.typekit.net/zcy3uha.css">
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
