--- a/rehearsal.html
+++ b/rehearsal.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="rehersal.html">Rehersal</a>
+                <a class="nav-link" href="rehearsal.html">Rehearsal</a>
             </li>
         </ul>
       
@@ -102,7 +102,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
         <div class="container-fluid mt-4 mb-4">  
 
           <div class="a-spot" style="text-align: center">
-          <img class="image-1 shadow" src="img/rehersal/rehersal-1.png"">
+          <img class="image-1 shadow" src="img/rehearsal/rehearsal-1.png"">
           </div>
 
     </div>
@@ -114,7 +114,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
         <div class="container-fluid mt-4 mb-4">  
 
           <div class="a-spot" style="text-align: center">
-          <img class="image-1 shadow" src="img/rehersal/rehersal-2.png"">
+          <img class="image-1 shadow" src="img/rehearsal/rehearsal-2.png"">
           </div>
 
     </div>
