--- a/order.html
+++ b/order.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="rehersal.html">Rehersal</a>
+                <a class="nav-link" href="rehearsal.html">Rehearsal</a>
             </li>
         </ul>
     </div>
