--- a/schedule.html
+++ b/schedule.html
@@ -52,7 +52,7 @@
                 <a class="nav-link" href="schedule.html">Schedule</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="rehersal.html">Rehersal</a>
+                <a class="nav-link" href="rehearsal.html">Rehearsal</a>
             </li>
         </ul>
     </div>
@@ -120,7 +120,7 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
     
       <img class="image-3 mt-3" src="img/schedule/schedule-1.png">
 
-      <h4 class="center mt-3"><a style="color: #B1605A" href="rehersal.html">See the schedule for the rehersal dinner →</a></h4>
+      <h4 class="center mt-3"><a style="color: #B1605A" href="rehearsal.html">See the schedule for the rehearsal dinner →</a></h4>
 
       <img class="image-3 mt-3" src="img/schedule/schedule-2.png">
 
