--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+       <meta property="og:title" content="The Order of Virtue">
+    <meta property="og:image" content="img/men/order-new.png">
+    <meta property="og:description" content="A user manual for Membership">
+    <meta property="og:url" content="http://www.meetusinthegarden.com/order">
+
     <!-- TypeKit -->
     <link rel="stylesheet" href="https://use.typekit.net/zcy3uha.css">
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
