updates to imgs

--- a/schedule.html
+++ b/schedule.html
@@ -123,6 +123,8 @@ box-shadow: 0 8px 32px 0 rgba(207,207,207,0.50);
 
     	<h1>Schedule</h1>
     
+      <img class="image-3 mt-3" src="img/schedule/thursday.png">
+
       <img class="image-3 mt-3" src="img/schedule/schedule-1.png">
 
       <h4 class="center mt-3"><a style="color: #B1605A" href="rehearsal.html">See the schedule for the rehearsal dinner →</a></h4>
